# Trinity

./: .gitignore  CMakeLists.txt  README.md  common.hpp  init.sh  main.cpp
configuration/: network_traffic.json
env/: install_all.sh  install_pcap.sh
metainfo_extract/: CMakeLists.txt  feature_extractor.cpp  feature_extractor.hpp
packet_parse/: CMakeLists.txt  packet_basic.hpp  packet_metainfo.hpp  pcap_parser.cpp  pcap_parser.hpp  pcpp_common.hpp
script/: rebuild.sh
